# indexd-sdk

./: .gitignore  Cargo.toml  IndexdSDK.podspec  Package.swift  SiaStorageSDK.podspec  pyproject.toml
.github/workflows/: kotlin.yml  node.yml  python.yml  swift.yml
examples/kotlin/: Example.kt  README.md
examples/kotlin/src/main/kotlin/: Example.kt
examples/node/: example.mjs  package.json
examples/python/: README.md  example.py
examples/swift/: Package.swift
examples/swift/Sources/: main.swift
kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/src/main/kotlin/sia/indexd/: Wrappers.kt
node/: README.md  build.sh  wrappers.d.ts  wrappers.js
python/: README.md  pyproject.toml
python/indexd_sdk/: __init__.py  wrappers.py
python/sia_indexd/: wrappers.py
python/sia_storage/: __init__.py  wrappers.py
src/: lib.rs
swift/: README.md  build.sh
swift/Sources/IndexdSDK/: IndexdSDK.swift
swift/Sources/SiaStorageSDK/: SiaStorageSDK.swift
