[package]
name = "sia_storage_sdk"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/SiaFoundation/sia-storage-sdk"
license = "MIT"
description = "UniFFI bindings for the Sia Storage SDK"
authors = ["The Sia Foundation"]

[lib]
name = "sia_storage_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sia_storage_ffi = { git = "https://github.com/SiaFoundation/sia-sdk-rs.git", rev = "a6994c84adf27c0de14aaedce2d69e6056475930" }
uniffi = { version = "=0.31.1", features = ["cli", "tokio"] }

[[bin]]
name = "uniffi-bindgen"
